# mpi-raytrace

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FixCLAPACK.cmake
include/: sphere.h
include/mpi-raytrace/: camera-mpi.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  ray.h  sphere.h  utility.h  vec.h  vec3.h
src/: CMakeLists.txt  main.cpp
